Update reset.css to prevent horizontal scrolling and limit max width

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -6,6 +6,12 @@
     -webkit-font-smoothing: antialiased;
 }
 
+html, body {
+    overflow-x: hidden; /* Bloque le scroll horizontal */
+    max-width: 100vw; /* Empêche l'agrandissement horizontal */
+}
+
+
 /* Suppression des styles de liste */
 ul, ol {
     list-style: none;
@@ -24,6 +30,7 @@ body {
     text-rendering: optimizeLegibility;
     background-color: var(--color-bg);
     min-height: 100vh;
+
 }
 
 /* Suppression des bordures et des styles par défaut des boutons et inputs */
